using UnityEngine;

public class Path : Entity
{
    public Path(Vector2 spawnPosition) : base(spawnPosition)
    {
    }
}
