using System.Collections.Generic;
using System.Diagnostics;
using Codes.utility;
namespace Codes.Security
{
    public class AirBalloon
    {
        private List<Position> _waypoints;

        public AirBalloon(List<Position> waypoints)
        {
            _waypoints = waypoints;
        }

        public void Travel()
        {
            
        }
    }
}