namespace Codes.animal
{
    public class Carnivore : Animal
    {
        public Carnivore(int age, int gender, int hunger, int thirst) : base(age, gender, hunger, thirst)
        {
        } 
    }
}